feat(i18n): add Language service to manage translation state and persistence

--- a/src/portfolio-web/src/app/app.html
+++ b/src/portfolio-web/src/app/app.html
@@ -189,8 +189,8 @@
   <mat-menu #menu="matMenu">
     @for (lang of languages; track lang.getId()) {
       <button mat-menu-item
-        (click)="changeLanguage(lang)"
-        [disabled]="currentLang === lang.getCode()" >
+        (click)="onSelectLanguage(lang)"
+        [disabled]="getCurrentLang() === lang" >
         {{ lang.getFlag() }} {{ lang.getName() }}
       </button>
     } @empty {
