docs(odd): update Interface Specification in ODD with JSDoc comments for the language subsystem

--- a/documents/compodoc/components/App.html
+++ b/documents/compodoc/components/App.html
@@ -120,6 +120,14 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>The root component of the application.</p>
+<p>Acts as the main container including routing and other application features.</p>
+
+    </p>
 
 
 
@@ -196,6 +204,14 @@ import { TranslatePipe, TranslateDirective } from &quot;@ngx-translate/core&quot
 import { RouterOutlet } from &#x27;@angular/router&#x27;;
 import { LanguageSwitcher } from &#x27;./shared/components/language-switcher/language-switcher&#x27;;
 
+/**
+ * The root component of the application.
+ *
+ * Acts as the main container including routing and other application features.
+ *
+ * @export
+ * @component
+ */
 @Component({
   selector: &#x27;app-root&#x27;,
   imports: [
